--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,25 @@ code {
 }
 @font-face{
   font-family: 'Poppins-Medium';
-  src: local('Poppins'), url('../public/fonts/Poppins-Medium.ttf') format('ttf');
+  src: local('Poppins'), url('../public/fonts/Poppins-Medium.ttf') format('truetype');
 }
 @font-face{
   font-family: 'Poppins-Regular';
-  src: local('Poppins'), url('../public/fonts/Poppins-Regular.ttf') format('ttf');
+  src: local('Poppins'), url('../public/fonts/Poppins-Regular.ttf') format('truetype');
+}
+@font-face{
+  font-family: 'NanumPenScript-Regular';
+  src: local('NanumPenScript'), url('../public/fonts/NanumPenScript-Regular.ttf') format('truetype');
+}
+@font-face{
+  font-family: 'NanumSquareB';
+  src: url('../public/fonts/NanumSquareB.ttf') format('truetype');
+}
+@font-face{
+  font-family: 'NanumSquareEB';
+  src: url('../public/fonts/NanumSquareEB.ttf') format('truetype');
 }
 @font-face {
   font-family: 'NotoSansCJKkr-Medium';
-  src: local('NotoSansCJKkr'), url('../public/fonts/NotoSansCJKkr-Medium.otf') format('otf');
+  src: local('NotoSansCJKkr'), url('../public/fonts/NotoSansCJKkr-Medium.otf') format('opentype');
 }
